testcrate/ui/unresolved-type.stderr
error[E0412]: cannot find type `A` in this scope
 --> $DIR/unresolved-type.rs:8:20
  |
8 | fn foo() -> Result<A, u32> {
  |                    ^ not found in this scope
  |
  = help: there is an enum variant `futures::future::Either::A`, try using `futures::future::Either`?

error[E0412]: cannot find type `A` in this scope
  --> $DIR/unresolved-type.rs:12:23
   |
12 | #[async_stream(item = A)]
   |                       ^ not found in this scope
   |
   = help: there is an enum variant `futures::future::Either::A`, try using `futures::future::Either`?

error[E0907]: type inside generator must be known in this context
  --> $DIR/unresolved-type.rs:12:1
   |
12 | #[async_stream(item = A)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/unresolved-type.rs:12:1
   |
12 | #[async_stream(item = A)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

You've got a few errors: E0412, E0907
If you want more information on an error, try using "rustc --explain E0412"
